--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,7 @@
         }
     ],
     "require": {
-        "php": "^5.5 | ^7.0"
+        "php": "^5.5 | ^7.0 | ^8.0""
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8.36 | ^5.7.21 | ^6 | ^7",
