--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "graze/array-merger",
+    "name": "egor260890/array-merger",
     "description": "Merge arrays recusively using custom value choosers",
     "keywords": [
         "graze",
